--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png" />
 
-    <title>facebook_clone</title>
+    <title>facebook testing</title>
     <link rel="manifest" href="manifest.json" />
 
     <script>
