--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png" />
 
-    <title>facebook testing</title>
+    <title>Facebook Testing</title>
     <link rel="manifest" href="manifest.json" />
 
     <script>
       // The value below is injected by flutter build, do not touch.
-      var serviceWorkerVersion = "3676946686";
+      var serviceWorkerVersion = "2821634025";
     </script>
     <!-- This script adds the flutter initialization JS code -->
     <script src="flutter.js" defer></script>
